FIX(*): Unify the open source version and internal version code
Summary:
1. clean up unused code.
2. adjust the format and date

Conflicts:
	jdk/test/ProblemList.txt